...
        android:id="@+id/achievementDisplay"
        android:layout_width="100dp"
        android:layout_height="183dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/ravenButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ravenDollars"
        app:layout_constraintVertical_bias="0.228">

        <ImageView
        android:layout_width="82dp"
        android:layout_height="match_parent"
        android:background="@drawable/achievementview"/>
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408"
        app:srcCompat="@drawable/flame" />


    <TextView
        android:id="@+id/total_rodneys"
        android:layout_width="46dp"
        android:layout_height="26dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
...
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/total_helios"
        android:layout_width="38dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/totalRavenDollars"
        android:layout_width="194dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:text="0"
        android:textAlignment="viewStart"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/store_button"
        android:layout_width="109dp"
        android:layout_height="102dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:fadingEdge="horizontal|vertical"
        android:fadingEdgeLength="20sp"
...
        android:src="@drawable/mainbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ravenDollarsPerSecond"
        android:layout_width="194dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:text="0 R$/s"
        android:textAlignment="viewStart"
        android:textColor="#F9FAFA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalRavenDollars" />

    <TextView
...
