<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:backgroundTint="#EDEDED"
    android:backgroundTintMode="multiply">


    <ImageButton
        android:id="@+id/buy_multiplier_koontz"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyKoontzMultiplier"
        android:padding="@null"
        android:scaleType="fitCenter"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@drawable/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/koontz_frame"
        app:layout_constraintTop_toBottomOf="@+id/buy_multiplier_eternalFlame" />

    <ImageButton
        android:id="@+id/buy_multiplier_joshTandy"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyJoshTandyMultiplier"
        android:padding="@null"
        android:scaleType="fitCenter"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@drawable/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/tandy_frame"
        app:layout_constraintTop_toBottomOf="@+id/buy_multiplier_koontz" />

    <FrameLayout
        android:id="@+id/tandy_frame"
        android:layout_width="235dp"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/koontz_frame">

        <ImageButton
            android:id="@+id/buy_joshTandy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="buyJoshTandy"
            android:padding="@null"
            android:scaleType="fitXY"
            android:src="@drawable/santaupgrade"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="423dp" />

        <TextView
            android:id="@+id/tandyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="34dp"
            android:clickable="false"
            android:text="0/s" />
        <TextView
            android:id="@+id/joshTandy_cost_text"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="28dp"
            android:text="R$2000"
            android:textAlignment="center"
            android:textSize="10sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/koontz_frame"
        android:layout_width="235dp"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/flame_frame"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageButton
            android:id="@+id/buy_koontz"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="buyKoontz"
            android:padding="@null"
            android:scaleType="fitXY"
            android:src="@drawable/koontzupgrade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buy_rodneyButton" />
        <TextView
            android:id="@+id/koontzValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="34dp"
            android:clickable="false"
            android:text="0/s" />
        <TextView
            android:id="@+id/koontz_cost_text"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="28dp"
            android:text="R$1000"
            android:textAlignment="center"
            android:textSize="10sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/flame_frame"
        android:layout_width="235dp"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/helios_frame"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageButton
            android:id="@+id/buy_eternalFlame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@null"
            android:onClick="buyEternalFlame"
            android:padding="@null"
            android:scaleType="fitXY"
            android:src="@drawable/flameupgrade"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buy_heliosButton" />

        <TextView
            android:id="@+id/flameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="34dp"
            android:clickable="false"
            android:text="0/s" />
        <TextView
            android:id="@+id/eternalFlame_cost_text"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="28dp"
            android:text="R$500"
            android:textAlignment="center"
            android:textSize="10sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </FrameLayout>

    <ImageButton
        android:id="@+id/buy_multiplier_rodney"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyRodneyMultiplier"
        android:padding="@null"
        android:scaleType="fitCenter"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@drawable/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/rodney_frame"
        app:layout_constraintTop_toBottomOf="@+id/currRavenDollars" />

    <ImageButton
        android:id="@+id/buy_multiplier_helios"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyHeliosMultiplier"
        android:padding="@null"
        android:scaleType="fitCenter"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@drawable/multiply"
        android:text=" Buy Multiplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/helios_frame"
        app:layout_constraintTop_toBottomOf="@+id/buy_multiplier_rodney" />

    <ImageButton
        android:id="@+id/buy_multiplier_eternalFlame"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="24dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyEternalFlameMultiplier"
        android:padding="@null"
        android:scaleType="fitCenter"
        android:scaleX="1.7"
        android:scaleY="1.7"
        android:src="@drawable/multiply"
        android:text=" Buy Multiplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/flame_frame"
        app:layout_constraintTop_toBottomOf="@+id/buy_multiplier_helios" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="109dp"
        android:layout_height="102dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="1dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="openHomePage"
        android:padding="1dp"
        android:scaleType="fitCenter"
        android:src="@drawable/homebutton"
        android:text="@string/home_nav_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/rodney_frame"
        android:layout_width="235dp"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="63dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currRavenDollars">
    <ImageButton
        android:id="@+id/buy_rodneyButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyRodney"
        android:padding="@null"
        android:scaleType="fitXY"
        android:src="@drawable/rodneyupgrade"
        app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/rodneyValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="34dp"
            android:clickable="false"
            android:text="0/s" />
        <TextView
            android:id="@+id/rodney_cost_text"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="160dp"
            android:text="R$10"
            android:textAlignment="center"
            android:textSize="10sp"
            android:visibility="visible"
            tools:visibility="visible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/helios_frame"
        android:layout_width="235dp"
        android:layout_height="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rodney_frame">
    <ImageButton
        android:id="@+id/buy_heliosButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:background="@null"
        android:onClick="buyHelios"
        android:padding="@null"
        android:scaleType="fitXY"
        android:src="@drawable/heliosupgrade"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/heliosValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="34dp"
        android:clickable="false"
        android:text="0/s" />
        <TextView
            android:id="@+id/helios_cost_text"
            android:layout_width="59dp"
            android:layout_height="24dp"
            android:layout_marginStart="160dp"
            android:layout_marginTop="28dp"
            android:text="R$100"
            android:textAlignment="center"
            android:textSize="10sp"
            android:visibility="visible"
            tools:visibility="visible" />
</FrameLayout>
    <TextView
        android:id="@+id/currRavenDollars"
        android:layout_width="177dp"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="Raven Dollars: 0"
        android:textAlignment="center"
        android:textColor="#EFF4F0"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>